# jmes-cookiecutter-python-package

./: .gitignore  README.md  README.rst  cookiecutter.json  pyproject.toml
.github/workflows/: run-tests.yml
tests/: test_template.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: run-tests.yml
{{cookiecutter.project_slug}}/docs/: mkdocs.yml
{{cookiecutter.project_slug}}/docs/docs/: index.md
{{cookiecutter.project_slug}}/scripts/: stage-release
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
